--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.18.1",
+    "@tanstack/react-query-devtools": "^5.18.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -16,6 +18,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.18.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
