--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.8.0",
     "sass": "^1.70.0",
     "zustand": "^4.5.0"
   },
