--- a/back/wordseed/src/main/resources/properties/env.properties
+++ b/back/wordseed/src/main/resources/properties/env.properties
@@ -1,3 +1,3 @@
 yml.file.datasource.username=sa
-yml.file.datasource.url=jdbc:h2:tcp://localhost/~/test
-yml.file.datasource.password=
+yml.file.datasource.url=jdbc:h2:tcp://localhost/~/word
+yml.file.datasource.password=sa
