--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.0",
     "sass": "^1.70.0",
+    "swiper": "^11.0.6",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
