Feat: 작성 - Post Controller 구현 [#66]

--- a/back/wordseed/src/main/resources/application.yml
+++ b/back/wordseed/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
+    driver-class-name: ${yml.file.datasource.driver}
     username: ${yml.file.datasource.username}
     url: ${yml.file.datasource.url}
     password: ${yml.file.datasource.password}
