Init: 설정- QueryDSL 초기 오류 수정 [#75]

--- a/back/wordseed/build.gradle
+++ b/back/wordseed/build.gradle
@@ -49,12 +49,8 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-//clean {
-//    delete file('src/main/generated')
-//}
-
 // === Querydsl 빌드 옵션 (선택사항) ===
-def querydslDir = "$buildDir/generated/querydsl"
+def querydslDir = "/src/main/generated/"
 
 sourceSets {
     main.java.srcDirs += [ querydslDir ]
