--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
     "@tanstack/react-query": "^5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "axios": "^1.6.7",
-    "next": "14.1.0",
+    "next": "^14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.0",
