Fix: 수정 - Docker Spring 실행 코드 Volume으로 연결 [#148]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,7 @@ services:
     build: ./back/wordseed
     ports:
       - "8080:8080"
+    volumes:
+      - ./back/wordseed:/srv/docker-server
     depends_on:
       - database_mysql
