--- a/back/wordseed/src/main/resources/application.yml
+++ b/back/wordseed/src/main/resources/application.yml
@@ -7,12 +7,12 @@ spring:
   jpa:
     properties:
       hibernate:
-        format_sql: 'true'
+        format_sql: "true"
     hibernate:
       ddl-auto: update
-    show-sql: 'true'
+    show-sql: "true"
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
 server:
-  port: 8081
+  port: 8080
