--- a/back/wordseed/build.gradle
+++ b/back/wordseed/build.gradle
@@ -43,6 +43,15 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // Google's OAuth2 client library
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.23.0'
+
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation 'org.json:json:20240303'
+
+    //WebClient
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 }
 
 tasks.named('test') {
