--- a/back/wordseed/build.gradle
+++ b/back/wordseed/build.gradle
@@ -49,6 +49,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.json/json
     implementation 'org.json:json:20240303'
+
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'javax.xml.bind:jaxb-api:2.3.1' //javax.xml.bind.DatatypeConverter 오류 방지
 }
 
 tasks.named('test') {
