--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-intersection-observer": "^9.8.0",
     "sass": "^1.70.0",
     "swiper": "^11.0.6",
+    "xior": "^0.5.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
